--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -23,13 +23,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/dashboard">Home</a>
+          <a class="nav-link" href="cart//dashboard">Home</a>
         </li>
         <ul class="navbar-nav mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/cart">Cart</a>
+            <a class="nav-link active" aria-current="page" href="/cart/viewcart">Cart:<span th:text="${totalQuantity}"></span></a>
           </li>
-          <form action="" method="POST">
+          <form action="/cart/clear" method="POST">
             <button type="submit" name="del" class="">Clear Cart</button>
           </form>
         </ul>
